# hacker-news-chinese

./: .gitignore  PRD.md  README.md  TODO.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: articles.py  auth.py  chat.py  interactions.py
backend/app/core/: config.py  news_ingestor.py  prompts.py  scheduler.py
backend/app/db/: redis.py
backend/app/models/: article.py  chunk.py
backend/app/repositories/: article_repository.py  chat_repository.py  chunk_repository.py  interaction_repository.py  vector_repository.py
backend/app/schemas/: article.py  chat.py
backend/app/services/: article_service.py  chat_service.py  extraction_service.py  interaction_service.py  translate_service.py  vector_service.py
db/: article.sql  conversations&messages.sql  favorites&read_later.sql
db/functions/: handle_favorite.sql
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/articles/[id]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: article-card.tsx  layout-shifter.tsx  providers.tsx
frontend/src/components/auth/: login-dialog.tsx
frontend/src/components/chat/: chat-message-bubble.tsx  chat-panel.tsx  login-form.tsx
frontend/src/components/ui/: sheet.tsx
frontend/src/hooks/: use-chat-stream.ts
frontend/src/lib/: api.ts
frontend/src/stores/: auth.ts  chat.ts
frontend/src/types/: api.ts
